example content migration script (+1 squashed commit) Squashed commits: [2efc8c6] example content migration script