@@ -88,7 +88,8 @@ fi
 # default JVM options
 if [ -z "$CPM_JVM_OPTS" ]; then
    CPM_JVM_OPTS="-server -Xms${CPM_HEAP_MIN}m -Xmx${CPM_HEAP_MAX}m -Djava.awt.headless=true"
-   CPM_JVM_OPTS="-Dcom.sun.management.jmxremote.port=9005 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=localhost"
+   CPM_JVM_OPTS="${CPM_JVM_OPTS} -Dcom.sun.management.jmxremote.port=9005 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=localhost"
+   CPM_JVM_OPTS="${CPM_JVM_OPTS} --add-opens java.base/java.lang=ALL-UNNAMED" # required for cleaning up ThreadLocals on Java 17 ,  https://sling.apache.org/news/sling-12-released.html
 fi
 
 # debug option
